# bevy-space-physics

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yml
src/: main.rs
src/bevy_space_physics/: g_force.rs  mod.rs  physics.rs  player.rs  ship_plugin.rs  sound.rs  space.rs  text.rs
