[package]
name = "bevy-space-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0" }
bevy_editor_pls = "0.6.0"
bevy_hanabi = "0.8.0"
bevy_kira_audio = { version = "0.18.0", features=["mp3"] }
bevy_math = "0.12.0"
bevy_third_person_camera = "0.1.7"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
