[package]
name = "bevy-space-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0" }
bevy_editor_pls = "0.8.1"
bevy_hanabi = "0.10.0"
bevy_kira_audio = { version = "0.19.0", features=["mp3"] }
bevy_math = "0.13.1"
bevy_third_person_camera = "0.1.10"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
